bin/testsuite/tests/compiler/src/errors/compiler5020.swg
#global testerror "Err0517"

#run
{
    fallthrough
}
